--- a/src/WorldTravel.Web/Pages/Home/Index.cshtml
+++ b/src/WorldTravel.Web/Pages/Home/Index.cshtml
@@ -33,12 +33,12 @@
             <div class="blur-up lazyload">
                 <img class="blur-up lazyload" data-src="/web/images/home/s1.png" src="/web/images/home/s1.png" alt="@L["ImageFailedToLoad"]" title="@L["DefaultImageTitle"]" />
                 <div class="slideshow__text-wrap slideshow__overlay classic middle">
-                    <div class="slideshow__text-content classic left" style="margin-top:-200px">
+                    <div class="slideshow__text-content classic left my-home-slider">
                         <div class="container">
                             <div class="wrap-caption left">
-                                <h2 class="h1 mega-title slideshow__title" style="margin-left:-200px;color:wheat">@L["ProjectSlogan1"]</h2>
-                                <span class="mega-subtitle slideshow__subtitle" style="font-size:26px;color:wheat">@L["ProjectSlogan2"]</span>
-                                <a href="#about" style="padding:14px;border-radius:17px;color:coral;" class="btn" "> @L["ClickForInformation"] </a>
+                                <h2 class="h1 mega-title slideshow__title my-home-slider-h2">@L["ProjectSlogan1"]</h2>
+                                <span class="mega-subtitle slideshow__subtitle my-home-slider-span">@L["ProjectSlogan2"]</span>
+                                <a href="#about" class="btn my-home-slider-a"> @L["ClickForInformation"] </a>
                             </div>
                         </div>
                     </div>
@@ -49,12 +49,12 @@
             <div class="blur-up lazyload">
                 <img class="blur-up lazyload" data-src="/web/images/home/h1.png" src="/web/images/home/h1.png" alt="@L["ImageFailedToLoad"]" title="@L["DefaultImageTitle"]" />
                 <div class="slideshow__text-wrap slideshow__overlay classic middle">
-                    <div class="slideshow__text-content classic left" style="margin-top:-200px">
+                    <div class="slideshow__text-content classic left my-home-slider">
                         <div class="container">
                             <div class="wrap-caption left">
-                                <h2 class="h1 mega-title slideshow__title" style="margin-left:-200px;color:wheat">@L["ProjectSlogan1"]</h2>
-                                <span class="mega-subtitle slideshow__subtitle" style="font-size:26px;color:wheat">@L["ProjectSlogan2"]</span>
-                                <a href="#about" style="padding:14px;border-radius:17px;color:coral;" class="btn"> @L["ClickForInformation"] </a>
+                                <h2 class="h1 mega-title slideshow__title my-home-slider-h2">@L["ProjectSlogan1"]</h2>
+                                <span class="mega-subtitle slideshow__subtitle my-home-slider-span">@L["ProjectSlogan2"]</span>
+                                <a href="#about" class="btn my-home-slider-a"> @L["ClickForInformation"] </a>
                             </div>
                         </div>
                     </div>
@@ -65,12 +65,12 @@
             <div class="blur-up lazyload">
                 <img class="blur-up lazyload" data-src="/web/images/home/s2.png" src="/web/images/home/s2.png" alt="@L["ImageFailedToLoad"]" title="@L["DefaultImageTitle"]" />
                 <div class="slideshow__text-wrap slideshow__overlay classic middle">
-                    <div class="slideshow__text-content classic left" style="margin-top:-200px">
+                    <div class="slideshow__text-content classic left my-home-slider">
                         <div class="container">
                             <div class="wrap-caption left">
-                                <h2 class="h1 mega-title slideshow__title" style="margin-left:-200px;color:wheat">@L["ProjectSlogan1"]</h2>
-                                <span class="mega-subtitle slideshow__subtitle" style="font-size:26px;color:wheat">@L["ProjectSlogan2"]</span>
-                                <a href="#about" style="padding:14px;border-radius:17px;color:coral;" class="btn"> @L["ClickForInformation"] </a>
+                                <h2 class="h1 mega-title slideshow__title my-home-slider-h2">@L["ProjectSlogan1"]</h2>
+                                <span class="mega-subtitle slideshow__subtitle my-home-slider-span">@L["ProjectSlogan2"]</span>
+                                <a href="#about" class="btn my-home-slider-a"> @L["ClickForInformation"] </a>
                             </div>
                         </div>
                     </div>
@@ -97,7 +97,7 @@
                                 {
                     <div class="collection-grid-item p05">
                         <a href="/Country/Detail?Id=@countryContent.Id" class="collection-grid-item__link">
-                            <img data-src="@countryContent.PreviewImageUrl" style="width: 210px;height: 210px;border-radius:1000px" src="@countryContent.PreviewImageUrl" alt="@L["ImageFailedToLoad"]" title="@countryContent.Title" class="blur-up lazyload h275" />
+                            <img data-src="@countryContent.PreviewImageUrl"  src="@countryContent.PreviewImageUrl" alt="@L["ImageFailedToLoad"]" title="@countryContent.Title" class="blur-up lazyload home-country" />
                             <div class="collection-grid-item__title-wrapper bt7">
                                 <h3 class="collection-grid-item__title btn btn--secondary no-border">@countryContent.Title</h3>
                             </div>
