--- a/src/WorldTravel.Web/Pages/Info/Maintenance.cshtml
+++ b/src/WorldTravel.Web/Pages/Info/Maintenance.cshtml
@@ -12,7 +12,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>@L["ProjectName"]</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="/web/images/new-logo.png" />
+    <link rel="shortcut icon" href="/web/images/world-logo.png" />
     <link href="~/extensions/maintenance/maintenance.css" rel="stylesheet" />
 </head>
 <body>
