--- a/src/WorldTravel.Web/wwwroot/web/css/custom.css
+++ b/src/WorldTravel.Web/wwwroot/web/css/custom.css
@@ -119,16 +119,322 @@
         max-width: 960px
     }
 }*/
-
+/*
 @media (min-width: 1200px) {
     .home-text {
         margin-top: -250px !important;
     }
-}
+}*/
 
 
 /*--------------------*/
 
-.fs15 {
+/*.fs15 {
     font-size: 15px !important;
 }
+*/
+
+
+/*.my-home-slider {
+    margin-top: -200px;
+}
+
+.my-home-slider-h2 {
+    margin-left: -200px;
+    color: wheat;
+}
+
+.my-home-slider-span {
+    font-size: 26px;
+    color: wheat
+}*/
+
+@media (min-width: 100px) {
+    .fs15 {
+        font-size: 8px !important;
+    }
+
+    .home-country {
+        width: 120px !important;
+        height: 120px !important;
+        border-radius: 1000px;
+    }
+
+    .site-header__menu {
+        font-size: 20px;
+    }
+
+    /*  .slideshow__subtitle{
+        display:block;
+    }*/
+    .my-home-slider {
+        margin-top: -20px !important;
+    }
+
+    .my-home-slider-h2 {
+        margin-left: 20px;
+        /*font-size: 30px !important;*/
+    }
+
+    .my-home-slider-span {
+        font-size: 14px !important;
+    }
+
+    .my-home-slider-a {
+        padding: 8px;
+        border-radius: 17px;
+        color: coral !important;
+        font-size: 8px;
+    }
+
+    /*    .btn{
+        display:initial
+    }*/
+}
+
+@media (min-width: 260px) {
+    .fs15 {
+        font-size: 8px !important;
+    }
+    .home-country {
+        width: 80px !important;
+        height: 80px !important;
+        border-radius: 1000px;
+    }
+    .site-header__menu{
+        font-size:20px;
+    }
+
+    .my-home-slider {
+        margin-top: -0px !important;
+        
+    }
+
+    .my-home-slider-h2 {
+        margin-left: 0px !important;
+        color: wheat !important;
+        font-size: 20px !important;
+    }
+
+    .my-home-slider-span {
+        font-size: 14px !important;
+        color: wheat !important;
+    }
+
+    .my-home-slider-a {
+        padding: 8px !important;
+        border-radius: 17px !important;
+        color: coral !important;
+    }
+
+
+/*    .btn{
+        display:initial
+    }*/
+}
+@media (min-width: 576px) {
+    .home-country {
+        width: 120px !important;
+        height: 120px !important;
+        border-radius: 1000px;
+    }
+
+    .my-home-slider {
+        margin-top: -100px;
+    }
+
+    .my-home-slider-h2 {
+        margin-left: 0px !important;
+        color: wheat !important;
+        font-size: 30px !important;
+    }
+
+    .my-home-slider-span {
+        font-size: 26px !important;
+        color: wheat !important;
+    }
+
+    .my-home-slider-a {
+        padding: 10px !important;
+        border-radius: 17px !important;
+        color: coral !important;
+    }
+}
+@media (min-width: 768px) {
+
+    .home-country {
+        width: 180px !important;
+        height: 180px !important;
+        border-radius: 1000px;
+    }
+
+    .my-home-slider {
+        margin-top: -70px !important;
+    }
+
+    .my-home-slider-h2 {
+        margin-left: 0px !important;
+        color: wheat !important;
+        font-size: 50px !important;
+    }
+
+    .my-home-slider-span {
+        font-size: 26px !important;
+        color: wheat !important;
+    }
+
+    .my-home-slider-a {
+        padding: 14px !important;
+        border-radius: 17px !important;
+        color: coral !important;
+    }
+}
+
+@media (min-width: 992px) {
+    .fs15 {
+        font-size: 10px !important;
+    }
+    .my-home-slider {
+        margin-top: -80px !important;
+    }
+
+    .my-home-slider-h2 {
+        margin-left: 0px !important;
+        color: wheat !important;
+        font-size: 50px !important;
+    }
+
+    .my-home-slider-span {
+        font-size: 26px !important;
+        color: wheat !important;
+    }
+
+    .my-home-slider-a {
+        padding: 14px !important;
+        border-radius: 17px !important;
+        color: coral !important;
+    }
+}
+@media (min-width: 1200px) {
+    .home-text {
+        margin-top: -250px !important;
+    }
+    .fs15 {
+        font-size: 13px !important;
+    }
+    .home-country {
+        width: 210px !important;
+        height: 210px !important;
+        border-radius: 1000px;
+    }
+
+    .my-home-slider {
+        margin-top: -100px !important;
+    }
+
+    .my-home-slider-h2 {
+        margin-left: 0px !important;
+        color: wheat !important;
+        font-size: 50px !important;
+    }
+
+    .my-home-slider-span {
+        font-size: 26px !important;
+        color: wheat !important;
+    }
+
+    .my-home-slider-a {
+        padding: 14px !important;
+        border-radius: 17px !important;
+        color: coral !important;
+    }
+}
+@media (min-width: 1346px) {
+
+    .fs15 {
+        font-size: 15px !important;
+    }
+    .my-home-slider {
+        margin-top: -100px;
+    }
+
+    .my-home-slider-h2 {
+       /* margin-left: -200px;*/
+        /*color: wheat;*/
+    }
+
+    .my-home-slider-span {
+        font-size: 26px;
+    }
+    .my-home-slider {
+        margin-top: -200px !important;
+    }
+
+    .my-home-slider-h2 {
+        margin-left: -50px !important;
+        color: wheat !important;
+        font-size: 40px !important;
+    }
+
+    .my-home-slider-span {
+        font-size: 26px !important;
+        color: wheat !important;
+    }
+
+    .my-home-slider-a {
+        padding: 10px !important;
+        border-radius: 17px !important;
+        color: coral !important;
+    }
+}
+
+@media (min-width: 1700px) {
+
+    .my-home-slider {
+        margin-top: -200px !important;
+    }
+
+    .my-home-slider-h2 {
+        margin-left: -250px !important;
+        color: wheat !important;
+        font-size: 60px !important;
+    }
+
+    .my-home-slider-span {
+        font-size: 26px !important;
+        color: wheat !important;
+    }
+
+    .my-home-slider-a {
+        padding: 14px !important;
+        border-radius: 17px !important;
+        color: coral !important;
+        font-size: 18px;
+    }
+}
+
+@media (min-width: 2000px) {
+
+    .my-home-slider {
+        margin-top: -200px !important;
+    }
+
+    .my-home-slider-h2 {
+        margin-left: -250px !important;
+        color: wheat !important;
+        font-size:60px !important;
+    }
+
+    .my-home-slider-span {
+        font-size: 26px !important;
+        color: wheat !important;
+    }
+
+    .my-home-slider-a {
+        padding: 14px !important;
+        border-radius: 17px !important;
+        color: coral !important;
+        font-size:18px;
+    }
+}
+
