--- a/src/WorldTravel.Web/Pages/Shared/_Menu.cshtml
+++ b/src/WorldTravel.Web/Pages/Shared/_Menu.cshtml
@@ -13,16 +13,16 @@
     var jobs = await _jobAppService.GetJobListForUserAsync(new WorldTravel.Dtos.Jobs.GetJobRequestDto() { IsSeenHomePage = true });
 }
 <!--Web Menu-->
-<div class="header-wrap classicHeader animated d-flex" style="background-color:transparent;">
+<div class="header-wrap classicHeader animated d-flex">
     <div class="container-fluid">
         <div class="row align-items-center">
             <!--Web Logo-->
-            <div class="logo col-md-2 col-lg-2 d-none d-lg-block" style="padding-right: 0px;">
+            <div class="logo col-md-4 col-lg-4 d-none d-lg-block" >
                 <a href="/Home" style="text-decoration:none;">
                     <div style="display:flex;">
-                        <img src="/web/images/new-logo.png" height="120" alt="@L["ImageFailedToLoad"]" title="Anasayfa" />
-@*                        <span class="logo-next-name">@L["ProjectName"]</span>
-*@                    </div>
+                        <img src="/web/images/world-logo.png" height="60" alt="@L["ImageFailedToLoad"]" title="Anasayfa" />
+                        <span class="logo-next-name" style="font-size:28px;">@L["ProjectName"]</span>
+                    </div>
                 </a>
             </div>
             <!--End Web Logo-->
@@ -89,7 +89,7 @@
 <div class="mobile-nav-wrapper" role="navigation">
     <div class="closemobileMenu"><i class="icon anm anm-times-l pull-right"></i> Close Menu</div>
     <ul id="MobileNav" class="mobile-nav">
-        @* @if (CurrentUser.IsAuthenticated)
+ @*        @if (CurrentUser.IsAuthenticated)
         {
         <li class="lvl1"> <a href="#"><i class="fa fa-envelope fa-fw"></i>@L["Message"] (2)</a></li>
         <li class="lvl1 parent megamenu">
